# YAZIS

./: .gitignore  pyproject.toml
lab_2/: README.md  docker-compose.yml
lab_2/backend/: requirements.txt  run.py
lab_2/frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
lab_2/test_files/: A_Farewell_to_Arms.txt  The_Picture_of_Dorian_Gray.txt
lab_3/backend/: main.py  pyproject.toml
lab_3/backend/alembic/versions/: 71e854d78bd9_initial.py
lab_3/backend/app/: main.py
lab_3/backend/app/config/: settings.py
lab_3/backend/app/db/: session.py
lab_3/backend/app/models/: document.py  token.py
lab_3/backend/app/repositories/: document_repo.py
lab_3/backend/app/routers/: patterns.py  tokens.py
lab_3/backend/app/schemas/: token.py
lab_3/backend/app/services/: document_service.py  nlp_service.py  pattern_service.py
lab_3/test_files/: A_Study_in_Scarlet.txt  The_Turn_of_the_Screw.txt
lab_4 copy/: docker-compose.yml
lab_4 copy/backend/: pyproject.toml
lab_4 copy/backend/alembic/: env.py
lab_4 copy/backend/alembic/versions/: a1b2c3d4e5f6_add_semantic_columns.py
lab_4 copy/backend/app/models/: sentence.py  token.py
lab_4 copy/backend/app/repositories/: sentence_repo.py  token_repo.py
lab_4 copy/backend/app/routers/: documents.py  semantic.py  sentences.py
lab_4 copy/backend/app/schemas/: __init__.py  pattern.py  processing.py  semantic.py  sentence.py  token.py
lab_4 copy/backend/app/services/: conceptnet_service.py  document_service.py  wordnet_service.py
lab_4 copy/frontend/: package-lock.json  package.json
lab_5/: .gitignore  docker-compose.yml
lab_5 copy/: .env.example  .gitignore  docker-compose.yml
lab_5 copy/backend/: .dockerignore  Dockerfile  entrypoint.sh
lab_5 copy/frontend/: .dockerignore  Dockerfile  package-lock.json
lab_5/backend/: Dockerfile  alembic.ini  firebase_service_key.json  pyproject.toml
lab_5/backend/migrations/: env.py
lab_5/backend/migrations/versions/: 3b06c0ce677e_initial.py  a3f9e2b1c4d7_add_exercise_slug.py  d1e2f3a4b5c6_add_calorie_goal_to_user_profile.py  e2f3a4b5c6d7_add_cascade_delete_to_chat_message.py
lab_5/backend/src/dispatch/: api.py  database.py  enums.py  exceptions.py  main.py
lab_5/backend/src/dispatch/analytics/: views.py
lab_5/backend/src/dispatch/auth/: permissions.py
lab_5/backend/src/dispatch/chat/: agent.py  models.py  tools.py  views.py
lab_5/backend/src/dispatch/common/: utils.py
lab_5/backend/src/dispatch/exercise/: models.py  service.py  views.py  youtube.py
lab_5/backend/src/dispatch/exercise/seed/: exercises.json  seed_exercises.py
lab_5/backend/src/dispatch/session/: models.py  service.py  views.py
lab_5/backend/src/dispatch/user/: models.py  service.py
lab_5/backend/src/dispatch/workout/: agent.py  flows.py  models.py  service.py  tools.py  views.py
lab_5/backend/src/dispatch/workout/pipeline/: graph.py  schemas.py
lab_5/frontend/: Dockerfile  package-lock.json  package.json
reports/: report_yazis_1.docx
src/: __init__.py  main.py
src/config/: __init__.py  default_config.yaml  settings.py
src/core/: __init__.py  definition_service.py  dictionary_manager.py  document_processor.py  export_service.py  lexical_analyzer.py  llm_service.py  morphological_analyzer.py  rule_engine.py  search_engine.py  sound_manager.py  stem_extractor.py  study_manager.py  task_pdf_exporter.py
src/data/: __init__.py  (+3 more)
test_files/: middle_2.docx
(+204 files in other folders)
